--- a/pipelines/api/buildspec.yml
+++ b/pipelines/api/buildspec.yml
@@ -27,6 +27,7 @@ phases:
           --build-arg AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME} \
           --build-arg AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} \
           --build-arg AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
+          --build-arg DB_ENGINE=${DB_ENGINE} \
       - echo ------------------
   post_build:
     commands:
