--- a/pipelines/api/buildspec.yml
+++ b/pipelines/api/buildspec.yml
@@ -28,6 +28,7 @@ phases:
           --build-arg AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} \
           --build-arg AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} \
           --build-arg DB_ENGINE=${DB_ENGINE} \
+          --build-arg CORS_ALLOW_ALL_ORIGINS=${CORS_ALLOW_ALL_ORIGINS} \
       - echo ------------------
   post_build:
     commands:
